[tool.poetry]
name = "libemtk"
version = "0.1.2"
description = "Extended Modifiers Tool Kit (library)"
authors = ["0djentd"]
license = "GPL-3.0-or-later"
readme = "README.md"
homepage = "https://github.com/0djentd/libemtk"
repository = "https://github.com/0djentd/libemtk"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
